--- a/inicioCSS.html
+++ b/inicioCSS.html
@@ -23,10 +23,7 @@
 		margin-left: 0px;
 		margin-top: 50px;
 		margin-bottom: 50px;
-		padding-left: 25px;
-		padding-top: 25px;
-		padding-bottom: 25px;
-		padding-right: 25px;
+		padding: 25px 25px 25px 25px;
 		
 	}
 	h2 {
