--- a/inicioCSS.html
+++ b/inicioCSS.html
@@ -23,7 +23,7 @@
 		margin-left: 0px;
 		margin-top: 50px;
 		margin-bottom: 50px;
-		padding: 25px 25px 25px 25px;
+		padding: 40px;
 		
 	}
 	h2 {
